--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -10,7 +10,7 @@
       "description": "Antimatter powers an ecosystem of products for auctions. Build, design, connect, collect and trade all kinds of assets, tokens and NFTs across multiple blockchains."
     },
     "no-js": "JavaScript is required!",
-    "launch-app": "Launch app",
+    "launch-app": "Launch test app",
     "learn-more": "Learn more",
     "coming-soon": "Coming soon"
   },
