--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -2,7 +2,7 @@
   "common": {
     "site-title": "Antimatter",
     "meta": {
-      "keywords": "antimatter, bounce finance, finance, DeFi, bot",
+      "keywords": "antimatter, antimatter finance, finance, DeFi, MATTER",
       "description": "Antimatter powers an ecosystem of products for auctions. Build, design, connect, collect and trade all kinds of assets, tokens and NFTs across multiple blockchains."
     },
     "og": {
